unpackaged/main/default/objects/WorkIt2__Time_Entry__c/WorkIt2__Time_Entry__c.object-meta.xml
<CustomObject>
    <description>A single session worked on an object tracked by WorkIt! Child of the Timing Object.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>