unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Action__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Action__c</fullName>
    <label>Legacy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>