unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Business_Seconds__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Business_Seconds__c</fullName>
    <formula>MOD( floor(WorkIt2__Business_Calculated_Seconds__c) ,60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business-Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>