unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Business_Time__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Business_Time__c</fullName>
    <formula>TEXT(WorkIt2__Business_Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Business_Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Business_Seconds__c) &amp; &quot;s &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Time</label>
    <type>Text</type>
</CustomField>