unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Comment__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>