unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__End__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__End__c</fullName>
    <formula>IF( ISNULL( WorkIt2__Force_End__c),IF( ((NOW()  - WorkIt2__Heartbeat__c ) * 86400) &gt; 60, WorkIt2__Heartbeat__c, null), WorkIt2__Force_End__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End</label>
    <type>DateTime</type>
</CustomField>