unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Force_End__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Force_End__c</fullName>
    <label>WINTERNAL: Force End</label>
    <type>DateTime</type>
</CustomField>