unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__HB_Context__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__HB_Context__c</fullName>
    <label>WINTERNAL: HB Context</label>
    <length>4</length>
    <type>Text</type>
</CustomField>