unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Heartbeat__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Heartbeat__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>WINTERNAL: Heartbeat</label>
    <type>DateTime</type>
</CustomField>