unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Session_Type__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Session_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Session Type</label>
    <referenceTo>WorkIt2__Session_Type__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>