unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Start__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Start__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>