unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Time__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Time__c</fullName>
    <formula>TEXT(WorkIt2__Hours__c) &amp; &quot;h &quot; &amp; TEXT(WorkIt2__Minutes__c) &amp; &quot;m &quot; &amp; TEXT(WorkIt2__Seconds__c) &amp; &quot;s &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>