unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Time_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Time_In_Hours__c</fullName>
    <formula>WorkIt2__Workflow_Seconds__c / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>