unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Timeout_Seconds__c</fullName>
    <label>Timeout Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>