unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Timing__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Timing__c</fullName>
    <label>Timing</label>
    <referenceTo>WorkIt2__Timing__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>