unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Total_Seconds__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Total_Seconds__c</fullName>
    <formula>IF( ISNULL(WorkIt2__End__c) , (( NOW() - WorkIt2__Start__c) * 86400) , ((WorkIt2__End__c - WorkIt2__Start__c) * 86400))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WINTERNAL: Total Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>