unpackaged/main/default/objects/WorkIt2__Time_Entry__c/fields/WorkIt2__Workflow_Seconds__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Workflow_Seconds__c</fullName>
    <formula>( WorkIt2__Heartbeat__c -  WorkIt2__Start__c ) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WINTERNAL: Workflow Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>