unpackaged/main/default/objects/WorkIt2__Time_Entry__c/listViews/WorkIt2__All.listView-meta.xml
<ListView>
    <fullName>WorkIt2__All</fullName>
    <columns>NAME</columns>
    <columns>WorkIt2__Timing__c</columns>
    <columns>WorkIt2__Session_Type__c</columns>
    <columns>WorkIt2__Start__c</columns>
    <columns>WorkIt2__End__c</columns>
    <columns>WorkIt2__Time__c</columns>
    <columns>WorkIt2__Business_Time__c</columns>
    <columns>WorkIt2__Overtime_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Time Entries</label>
</ListView>